plugins/styled-bars/style.css
/* remove window dragging for nav bar (conflict with titlebar drag) */
ytmusic-nav-bar {
	-webkit-app-region : unset;
}

/* Move navBar downwards and make it opaque */
ytmusic-app-layout {
	--ytmusic-nav-bar-height: 120px;
}

ytmusic-search-box.ytmusic-nav-bar {
	margin-top: 25px;
}

.center-content.ytmusic-nav-bar {
  background: #030303;
}
yt-page-navigation-progress, #progress.yt-page-navigation-progress {
  top: 90px !important;
}
ytmusic-item-section-renderer[has-item-section-tabbed-header-renderer_] #header.ytmusic-item-section-renderer {
  top: 90px !important;
}
/* Custom scrollbar */
::-webkit-scrollbar {
  width: 12px; 
  background-color: #030303;
  -webkit-border-radius: 100px;
}
/* hover effect for both scrollbar area, and scrollbar 'thumb' */
::-webkit-scrollbar:hover {
  background-color: rgba(15, 15, 15, 0.699);
}

/* The scrollbar 'thumb' ...that marque oval shape in a scrollbar */
::-webkit-scrollbar-thumb:vertical {
  background-clip: padding-box;
  border: 2px solid rgba(0, 0, 0, 0);

  background: rgb(49, 0, 0);
  -webkit-border-radius: 100px;
}
::-webkit-scrollbar-thumb:vertical:active {
  background: rgb(56, 0, 0); /* Some darker color when you click it */
  -webkit-border-radius: 100px;
}

